// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SSL Certificate component renders 1`] = `
Array [
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
  >
    TLS Certificate
  </dt>,
  .c0.c0.c0 {
  margin: 0 0 0 4px;
  display: inline-block;
  color: inherit;
}

<dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
  >
    <a
      class="eui-displayInline"
      href="/certificates"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        id="generated-id-wrapper"
      >
        <div
          class="euiText emotion-euiText-s"
          tabindex="0"
        >
          <span
            color="success"
            data-euiicon-type="lock"
          />
          <h4
            class="c0"
          >
            Expires in 2 months
          </h4>
        </div>
      </span>
    </a>
  </dd>,
]
`;

exports[`SSL Certificate component renders null if invalid date 1`] = `
Array [
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
  >
    TLS Certificate
  </dt>,
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
  >
    <a
      class="eui-displayInline"
      href="/certificates"
    >
      <span>
        --
      </span>
    </a>
  </dd>,
]
`;

exports[`SSL Certificate component shallow renders 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "TestKeyForTesting",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "TestKeyForTesting",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <MonitorSSLCertificate
    tls={
      Object {
        "server": Object {
          "hash": Object {
            "sha1": "b7b4b89ef0d0caf39d223736f0fdbb03c7b426f1",
            "sha256": "12b00d04db0db8caa302bfde043e88f95baceb91e86ac143e93830b4bbec726d",
          },
          "x509": Object {
            "issuer": Object {
              "common_name": "GlobalSign CloudSSL CA - SHA256 - G3",
              "distinguished_name": "",
            },
            "not_after": "2020-04-24T11:41:38.200Z",
            "not_before": "2019-04-24T11:41:38.200Z",
            "public_key_algorithm": "RSA",
            "serial_number": "1234567890",
            "signature_algorithm": "SHA256-RSA",
            "subject": Object {
              "common_name": "r2.shared.global.fastly.net",
              "distinguished_name": "",
            },
          },
        },
      }
    }
  />
</Router>
`;
